--- a/Frontend/fcsp/package.json
+++ b/Frontend/fcsp/package.json
@@ -10,7 +10,11 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@tanstack/vue-query": "^5.62.9",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.46",
     "nuxt": "^3.15.0",
+    "pinia": "^2.3.0",
     "vue": "latest",
     "vue-router": "latest"
   }
