--- a/Frontend/fcsp/package.json
+++ b/Frontend/fcsp/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@tanstack/vue-query": "^5.62.9",
+    "bootstrap": "^5.3.3",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.46",
     "nuxt": "^3.15.0",
     "pinia": "^2.3.0",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "prettier": "^3.4.2"
   }
 }
