--- a/Backend/fcsp-webapi/FCSP.Services/FCSP.Services.csproj
+++ b/Backend/fcsp-webapi/FCSP.Services/FCSP.Services.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.Identity.Core" Version="2.2.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\FCSP.Repositories\FCSP.Repositories.csproj" />
   </ItemGroup>
 
