--- a/Frontend/fcsp/package.json
+++ b/Frontend/fcsp/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@tanstack/vue-query": "^5.62.9",
+    "ant-design-vue": "^4.2.6",
+    "antd": "^5.24.0",
     "bootstrap": "^5.3.3",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.46",
