--- a/Frontend/fcsp/package.json
+++ b/Frontend/fcsp/package.json
@@ -19,7 +19,7 @@
     "nuxt": "^3.15.0",
     "pinia": "^2.3.0",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "^4.0.13"
   },
   "devDependencies": {
     "prettier": "^3.4.2"
