--- a/Frontend/fcsp/package.json
+++ b/Frontend/fcsp/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@google/model-viewer": "^4.0.0",
     "@tanstack/vue-query": "^5.62.9",
     "ant-design-vue": "^4.2.6",
     "antd": "^5.24.0",
@@ -18,8 +19,10 @@
     "moment-timezone": "^0.5.46",
     "nuxt": "^3.15.0",
     "pinia": "^2.3.0",
+    "three": "^0.173.0",
+    "unplugin-vue-router": "^0.11.2",
     "vue": "latest",
-    "vue-router": "^4.0.13"
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "prettier": "^3.4.2"
