Fixed namespace error

--- a/Backend/fcsp-webapi/FCSP.DTOs/FCSP.DTOs.csproj
+++ b/Backend/fcsp-webapi/FCSP.DTOs/FCSP.DTOs.csproj
@@ -10,4 +10,8 @@
     <Folder Include="User\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FCSP.Common\FCSP.Common.csproj" />
+  </ItemGroup>
+
 </Project>
