--- a/Frontend/fcsp/package.json
+++ b/Frontend/fcsp/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@google/model-viewer": "^4.0.0",
     "@tanstack/vue-query": "^5.62.9",
+    "@vueuse/core": "^12.7.0",
     "ant-design-vue": "^4.2.6",
     "antd": "^5.24.0",
     "bootstrap": "^5.3.3",
