update request and response to enum

--- a/Backend/fcsp-webapi/FCSP.Models/appsettings.Development.json
+++ b/Backend/fcsp-webapi/FCSP.Models/appsettings.Development.json
@@ -1,5 +1,6 @@
 {
   "ConnectionStrings": {
-    "FCSP_DB": "Server=(local);Database=FCSP_DB;Uid=sa;Pwd=123456;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True"
+    "FCSP_DB": "Server=(local);Database=FCSP_DB;Uid=sa;Pwd=123456;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True",
+    "FCSP_DB_SOMEE": "workstation id=FCSP_DB.mssql.somee.com;packet size=4096;user id=admindb;pwd=Annumber1;data source=FCSP_DB.mssql.somee.com;persist security info=False;initial catalog=FCSP_DB;TrustServerCertificate=True"
   }
 }
