--- a/Backend/fcsp-webapi/FCSP.WebAPI/appsettings.Development.json
+++ b/Backend/fcsp-webapi/FCSP.WebAPI/appsettings.Development.json
@@ -12,7 +12,8 @@
     "ExpiryMinutes": 720
   },
   "ConnectionStrings": {
-    "FCSP_DB": "Server=(local);Database=FCSP_DB;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True"
+    "FCSP_DB": "Server=(local);Database=FCSP_DB;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True",
+    "FCSP_DB_SOMEE": "workstation id=FCSP_DB.mssql.somee.com;packet size=4096;user id=admindb;pwd=Annumber1;data source=FCSP_DB.mssql.somee.com;persist security info=False;initial catalog=FCSP_DB;TrustServerCertificate=True"
   },
   "TogetherAI": {
     "BaseUrl": "https://api.together.xyz",
