--- a/Frontend/fcsp/package.json
+++ b/Frontend/fcsp/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^7.0.1",
     "@google/model-viewer": "^4.0.0",
     "@tanstack/vue-query": "^5.62.9",
     "@vueuse/core": "^12.7.0",
