--- a/Frontend/fcsp/package.json
+++ b/Frontend/fcsp/package.json
@@ -21,6 +21,7 @@
     "moment-timezone": "^0.5.46",
     "nuxt": "^3.15.0",
     "pinia": "^2.3.0",
+    "swiper": "^11.2.5",
     "three": "^0.169.0",
     "unplugin-vue-router": "^0.11.2",
     "vue": "latest",
