--- a/Backend/fcsp-webapi/FCSP.Services/FCSP.Services.csproj
+++ b/Backend/fcsp-webapi/FCSP.Services/FCSP.Services.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.24.0" />
     <PackageReference Include="Microsoft.AspNet.Identity.Core" Version="2.2.4" />
 	<PackageReference Include="Microsoft.Extensions.Http" Version="9.0.2" />
   </ItemGroup>
