--- a/Backend/fcsp-webapi/FCSP.DTOs/FCSP.DTOs.csproj
+++ b/Backend/fcsp-webapi/FCSP.DTOs/FCSP.DTOs.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\FCSP.Common\FCSP.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
+  </ItemGroup>
+
 </Project>
