--- a/Frontend/fcsp/package.json
+++ b/Frontend/fcsp/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
     "@google/model-viewer": "^4.0.0",
+    "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
+    "@pinia/nuxt": "^0.5.5",
     "@tanstack/vue-query": "^5.62.9",
     "@vueuse/core": "^12.7.0",
     "ant-design-vue": "^4.2.6",
@@ -20,7 +22,7 @@
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.46",
     "nuxt": "^3.15.0",
-    "pinia": "^2.3.0",
+    "pinia": "^3.0.1",
     "swiper": "^11.2.5",
     "three": "^0.169.0",
     "unplugin-vue-router": "^0.11.2",
