--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /Backend/fcsp-webapi/FCSP.WebAPI/appsettings.json
 /Backend/fcsp-webapi/FCSP.WebAPI/appsettings.Development.json
 /Backend/fcsp-webapi/FCSP.Models/appsettings.Development.json
+/AIGenImage
