--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /Backend/fcsp-webapi/FCSP.WebAPI/appsettings.Development.json
 /Backend/fcsp-webapi/FCSP.Models/appsettings.Development.json
 /AIGenImage
+/Backend/fcsp-webapi/FCSP.Models/appsettings.json
