--- a/Backend/fcsp-webapi/FCSP.Services/FCSP.Services.csproj
+++ b/Backend/fcsp-webapi/FCSP.Services/FCSP.Services.csproj
@@ -16,5 +16,8 @@
   <ItemGroup>
     <ProjectReference Include="..\FCSP.Repositories\FCSP.Repositories.csproj" />
   </ItemGroup>
+<ItemGroup>
+  <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+</ItemGroup>
 
 </Project>
