--- a/Frontend/fcsp/package.json
+++ b/Frontend/fcsp/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "nuxt dev --port 3000",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
     "@google/model-viewer": "^4.0.0",
+    "@nuxtjs/axios": "^5.13.6",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
     "@pinia/nuxt": "^0.5.5",
     "@tanstack/vue-query": "^5.62.9",
@@ -19,6 +20,7 @@
     "ant-design-vue": "^4.2.6",
     "antd": "^5.24.0",
     "bootstrap": "^5.3.3",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.46",
     "nuxt": "^3.15.0",
