--- a/Frontend/fcsp/package.json
+++ b/Frontend/fcsp/package.json
@@ -20,7 +20,9 @@
     "ant-design-vue": "^4.2.6",
     "antd": "^5.24.0",
     "bootstrap": "^5.3.3",
+    "element-plus": "^2.9.7",
     "jwt-decode": "^4.0.0",
+    "konva": "^9.3.20",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.46",
     "nuxt": "^3.15.0",
@@ -29,6 +31,7 @@
     "three": "^0.169.0",
     "unplugin-vue-router": "^0.11.2",
     "vue": "^3.5.13",
+    "vue-konva": "^3.2.0",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
