--- a/Frontend/fcsp/package.json
+++ b/Frontend/fcsp/package.json
@@ -11,15 +11,18 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
+    "@element-plus/icons-vue": "^2.3.1",
     "@google/model-viewer": "^4.0.0",
     "@nuxtjs/axios": "^5.13.6",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
     "@pinia/nuxt": "^0.5.5",
+    "@popperjs/core": "^2.11.8",
     "@tanstack/vue-query": "^5.62.9",
     "@vueuse/core": "^12.7.0",
     "ant-design-vue": "^4.2.6",
     "antd": "^5.24.0",
-    "bootstrap": "^5.3.3",
+    "bootstrap": "^5.3.5",
+    "bootstrap-icons": "^1.11.3",
     "element-plus": "^2.9.7",
     "jwt-decode": "^4.0.0",
     "konva": "^9.3.20",
@@ -35,6 +38,7 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.2.10",
     "prettier": "^3.4.2"
   }
 }
