--- a/Frontend/fcsp/package.json
+++ b/Frontend/fcsp/package.json
@@ -16,8 +16,9 @@
     "@nuxtjs/axios": "^5.13.6",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
     "@pinia/nuxt": "^0.5.5",
-    "@popperjs/core": "^2.11.8",
+    "@popperjs/core": "npm:@sxzz/popperjs-es@^2.11.7",
     "@tanstack/vue-query": "^5.62.9",
+    "@vercel/speed-insights": "^1.2.0",
     "@vueuse/core": "^12.7.0",
     "ant-design-vue": "^4.2.6",
     "antd": "^5.24.0",
