--- a/Backend/fcsp-webapi/FCSP.Services/FCSP.Services.csproj
+++ b/Backend/fcsp-webapi/FCSP.Services/FCSP.Services.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.AspNet.Identity.Core" Version="2.2.4" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
 	<PackageReference Include="Microsoft.Extensions.Http" Version="9.0.2" />
+	<PackageReference Include="payOS" Version="1.0.9" />
   </ItemGroup>
 
   <ItemGroup>
