--- a/Frontend/fcsp/package.json
+++ b/Frontend/fcsp/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
+    "@antv/g2plot": "^2.4.33",
     "@element-plus/icons-vue": "^2.3.1",
     "@google/model-viewer": "^4.0.0",
     "@nuxtjs/axios": "^5.13.6",
